[gd_scene load_steps=9 format=3 uid="uid://ngxwohtx6g56"]

[ext_resource type="Script" uid="uid://dolss8q5rve2q" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://68350lqcci5b" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ytuvfybs4kpb" path="res://mob.tscn" id="2_h2yge"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.743851, 0.800766, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ig7tw"]
material = SubResource("StandardMaterial3D_ig7tw")

[sub_resource type="Curve3D" id="Curve3D_h2yge"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.5975, 0.0121632, -15.3649, 0, 0, 0, 0, 0, 0, 10.8683, 0.0116959, -14.6196, 0, 0, 0, 0, 0, 0, 10.7932, -0.0128269, 16.1777, 0, 0, 0, 0, 0, 0, -14.0083, -0.0131645, 16.4386),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_7dm0k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.623484, 0.781836, 0, -0.781836, -0.623484, 0, 20.4243, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.693691, 0.720273, 0, -0.720273, 0.693691, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.929)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2976, 0, -15.2389)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2976, 0, 15.542)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4462, 0, 15.542)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4462, 0, -14.6518)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_h2yge")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.0304488, 1.90824e-05, -0.999536, -9.09494e-13, 1, 1.90913e-05, 0.999536, 5.81307e-07, -0.0304488, -13.5975, 0.0121632, -15.3649)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
